# scribe-service

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
.maestro/: verify.sh
design/scribe-redesign-2026-05-24/: Scribe UX (offline).html  Scribe UX.html
docker/: entrypoint.sh
docker/backups/: Dockerfile  README.md  backup.sh  crontab  entrypoint.sh
docker/infisical-agent/: agent.yaml  scribe.env.tpl
docker/vast/: README.md
docs/: spike-client-side-capture.md  telegram-media-ingestion.md
docs/design/: native-mobile-per-job-cookie-supply.md
docs/runbooks/: bgutil-pot-provider.md  design-archive-preflight.md  download-canary.md  infisical-boot-fallback.md  non-root-volume-ownership.md  release-rollback.md
docs/runtime/: infisical-agent.md
extension/chrome/: README.md  cookies.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js  preflight.js  service_worker.js
extension/chrome-client-capture-poc/: README.md  manifest.json  offscreen.html  offscreen.js  popup.css  popup.html  popup.js  resolve.js  service_worker.js
migrations/: env.py
migrations/versions/: 31d97f52d359_merge_heads_correlation_id_and_.py  4b9f2a7c1e08_add_job_summarize_notify_prompt.py  923537e8b936_initial_schema_jobs_transcripts.py  a1b2c3d4e5f6_add_job_title.py  a7c1d3e4f201_summary_md_nullable.py  b8c9d012e345_add_auth_owners_users_tokens.py  c8b2e5f3a402_add_transcript_vast_cost.py  d1e3f4a5b603_add_job_callback_url.py  e2f4a6b8c901_add_app_config.py  e4f5a6b7c801_add_job_stage_events.py  f1a2b3c4d5e6_add_auth_users_owners.py  f2a3b4c5d602_add_transcript_share_links.py  f3a9b7c2d104_add_transcript_short_description.py  f6a7b8c9d012_add_owner_identity.py  f7c8d9e0a123_add_job_vast_instance_destroy_state.py  g1h2i3j4k504_add_transcript_author_metadata.py  h2i3j4k505_add_job_correlation_id.py  h2i3j4k5l605_add_jobs_attempts.py  h2i3j4k5l605_add_transcript_transcribe_provider.py  i3j4k5l6m706_add_transcript_media_archive.py
scripts/: check-design-nesting.sh  check-design-recipes.sh  check-design-source-parity.sh  check-design-tokens.sh  check-forbidden-primitives.sh  check-no-device-chrome.sh  generate_changelog.py  live-visual-qa.mjs  release-deploy.sh
src/scribe/: __init__.py  alerts.py  config.py  main.py  runtime_config.py  source_links.py
tests/: conftest.py  test_alerts.py  test_api_live_logs.py  test_api_spa_endpoints.py  test_auth_policy.py  test_auth_v2.py  test_author_metadata.py  test_changelog.py  test_chrome_extension.py  test_client_capture_poc.py  test_config_api.py  test_cookie_jar.py  test_correlation_id.py  test_docker_runtime.py  test_download_canary.py  test_downloader.py  test_ffmpeg_media.py  test_healthz_version.py  test_jobs_upload.py  test_jobs_youtube_cookies.py  test_log_redaction.py  test_media_store.py  test_migrations.py  test_obs.py  test_obs_ops.py  test_obs_ops_db.py  test_preflight.py  test_prompts_api.py  test_readyz.py  test_release_deploy.py  test_routes_backup_status.py  test_routes_dedup.py  test_routes_pure.py  test_runtime_config.py  test_source_links.py  test_spa_app_shell_source.py  test_spa_auth_ux.py  test_spa_design_system.py  test_spa_job_detail_log.py  test_spa_shell.py  (+27 more)
(+143 files in other folders)
