[project]
name = "scribe"
version = "0.1.0"
description = "Self-hosted YouTube video-summary service: URL -> transcript -> summary, with its own API + history. Obsidian-agnostic."
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "jinja2>=3.1",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "yt-dlp>=2026.3.17",
    "markdown>=3.10.2",
    "prometheus-client>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scribe"]

[dependency-groups]
dev = ["ruff>=0.9", "pytest>=8.3"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# E501 disabled — long URL strings + Cyrillic comments push the visual limit
# without being meaningfully harder to read.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"


[tool.ruff.lint.per-file-ignores]
# Depends() in default args is the canonical FastAPI pattern; trust it.
"src/scribe/api/routes.py" = ["B008"]
"src/scribe/web/views.py" = ["B008"]
